2005-05-09 Mikhail Khodjaiants
	Bug 80175: Replace the CDT source lookup by the source lookup provided by Eclipse platform.
	Removed CDebugEditor and old source lookup related classes and interfaces.
	* CDebugModelPresentation.java
	- CDebugEditor.java
	- EditorInputDelegate.java
	- EditorMessages.java
	- EditorMessages.properties
	- FileNotFoundElement.java
	- NoSymbolOrSourceElement.java
	- AddDirectorySourceLocationBlock.java
	- AddDirectorySourceLocationWizard.java
	- AddProjectSourceLocationBlock.java
	- AddProjectSourceLocationWizard.java
	- AddSourceLocationWizard.java
	- SourceLocationSelectionPage.java
	- SourceLocationWizardNode.java
	- WizardMessages.java
	- WizardMessages.properties
	- INewSourceLocationWizard.java
	* OldDefaultSourceLocator.java
	- SourceListDialogField.java
	- SourceLookupBlock.java
	- SourceLookupLabelProvider.java
	* SourceLookupMessages.properties
	- SourcePropertyPage.java
	* plugin.properties
	* plugin.xml

2005-04-27 Mikhail Khodjaiants
	Added path validation to CDirectorySourceContainerDialog.
	* CDirectorySourceContainerDialog.java
	* SourceLookupUIMessages.properties

2005-04-25 Mikhail Khodjaiants
	Added the new source container type (CDirectorySourceContainer) to provide 
	the UI support for the subfolders search.
	* ICDebugHelpContextIds.java
	+ CDirectorySourceContainerBrowser.java
	+ CDirectorySourceContainerDialog.java
	* SourceContainerWorkbenchAdapter.java
	* SourceLookupUIMessages.properties
	* plugin.xml

2005-04-22 Mikhail Khodjaiants
	Initalize the particiapants of the source lookup director when converting 
	from an old memento.
	* DefaultSourceLocator.java

2005-04-21 Mikhail Khodjaiants
	Changed the labels of the "Source Lookup Path" preference page to "Common Source Lookup Path".
	* PreferenceMessages.properties
	* plugin.properties

2005-04-21 Mikhail Khodjaiants
	Bug 92292: [artwork] "Instruction Stepping Mode" image is same as "Use Step Filters".
	* icons/dlcl16/instr_step.gif
	* icons/elcl16/instr_step.gif